force-app/main/default/objects/Membership_Participant__c/Membership_Participant__c.object-meta.xml
<CustomObject>
    <label>Membership Participant</label>
    <nameField>
        <label>Participant Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Membership Participants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>