force-app/main/default/objects/Membership_Participant__c/fields/Access_Type__c.field-meta.xml
<CustomField>
    <fullName>Access_Type__c</fullName>
    <label>Access Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digital Only</fullName>
            </value>
            <value>
                <fullName>Digital &amp; Physical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>