force-app/main/default/objects/Membership_Participant__c/fields/Card_Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>Card_Cancellation_Date__c</fullName>
    <label>Card Cancellation Date</label>
    <type>Date</type>
</CustomField>