force-app/main/default/objects/Membership_Participant__c/fields/Card_Issued_Date__c.field-meta.xml
<CustomField>
    <fullName>Card_Issued_Date__c</fullName>
    <description>Day when physical card was issued</description>
    <label>Card Issued Date</label>
    <type>Date</type>
</CustomField>