force-app/main/default/objects/Membership_Participant__c/fields/Card_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Card_Requested_Date__c</fullName>
    <label>Card Requested Date</label>
    <type>DateTime</type>
</CustomField>