force-app/main/default/objects/Membership_Participant__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Membership Participants</relationshipLabel>
    <relationshipName>Membership_Participants</relationshipName>
    <type>Lookup</type>
</CustomField>