force-app/main/default/objects/Membership_Participant__c/fields/Current_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Current_Card_Number__c</fullName>
    <label>Card Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>