force-app/main/default/objects/Membership_Participant__c/fields/Default_Funding_Account__c.field-meta.xml
<CustomField>
    <fullName>Default_Funding_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Funding Account</label>
    <referenceTo>Funding_Account__c</referenceTo>
    <relationshipLabel>Assigned Participants</relationshipLabel>
    <relationshipName>Membership_Participants</relationshipName>
    <type>Lookup</type>
</CustomField>