force-app/main/default/objects/Membership_Participant__c/fields/Invitation_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Invitation_Datetime__c</fullName>
    <label>Invitation Datetime</label>
    <type>DateTime</type>
</CustomField>