force-app/main/default/objects/Membership_Participant__c/fields/Invitation_Sender__c.field-meta.xml
<CustomField>
    <fullName>Invitation_Sender__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invitation Sender</label>
    <referenceTo>Membership_Participant__c</referenceTo>
    <relationshipLabel>Membership Participants</relationshipLabel>
    <relationshipName>Membership_Participants</relationshipName>
    <type>Lookup</type>
</CustomField>