force-app/main/default/objects/Membership_Participant__c/fields/Invitation_Token__c.field-meta.xml
<CustomField>
    <fullName>Invitation_Token__c</fullName>
    <label>Invitation Token</label>
    <length>100</length>
    <type>Text</type>
</CustomField>