force-app/main/default/objects/Membership_Participant__c/fields/Invitation_Token_Exp_Date__c.field-meta.xml
<CustomField>
    <fullName>Invitation_Token_Exp_Date__c</fullName>
    <label>Invitation Token Exp Date</label>
    <type>DateTime</type>
</CustomField>