force-app/main/default/objects/Membership_Participant__c/fields/Is_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Primary Contact</label>
    <type>Checkbox</type>
</CustomField>