force-app/main/default/objects/Membership_Participant__c/fields/Membership__c.field-meta.xml
<CustomField>
    <fullName>Membership__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Membership</label>
    <referenceTo>Membership__c</referenceTo>
    <relationshipLabel>Membership Participants</relationshipLabel>
    <relationshipName>Membership_Participants</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>