force-app/main/default/objects/Membership_Participant__c/fields/Participant_Management_Flow__c.field-meta.xml
<CustomField>
    <fullName>Participant_Management_Flow__c</fullName>
    <inlineHelpText>This field is used for Flow Magic Picklist to launch a collection of participant management tasks.</inlineHelpText>
    <label>Participant Management</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manage Card</fullName>
            </value>
            <value>
                <fullName>Update Permission</fullName>
            </value>
            <value>
                <fullName>View Transactions</fullName>
            </value>
            <value>
                <fullName>Manage Application</fullName>
                <isActive>false</isActive>
                <label>Manage Application</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>