force-app/main/default/objects/Membership_Participant__c/fields/Preferred_Store__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preferred Store</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipLabel>Membership Participants</relationshipLabel>
    <relationshipName>Membership_Participants</relationshipName>
    <type>Lookup</type>
</CustomField>