force-app/main/default/objects/Membership_Participant__c/fields/Screen_Flow_Actions__c.field-meta.xml
<CustomField>
    <fullName>Screen_Flow_Actions__c</fullName>
    <label>Screen Flow Actions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manage</fullName>
                <label>Manage Member&apos;s details</label>
            </value>
            <value>
                <fullName>invite</fullName>
                <label>Manage Invitations</label>
            </value>
            <value>
                <fullName>Permissions</fullName>
                <label>Manage Permissions</label>
            </value>
            <value>
                <fullName>Manage card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>