force-app/main/default/objects/Membership_Participant__c/fields/Transaction_Instrument_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Instrument_Allowed__c</fullName>
    <label>Transaction Instrument Allowed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digital Card</fullName>
            </value>
            <value>
                <fullName>Physical Card</fullName>
            </value>
            <value>
                <fullName>Purchase Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>