force-app/main/default/objects/Membership_Participant__c/fields/Trust_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Trust_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trust Indicator</label>
    <type>Checkbox</type>
</CustomField>