force-app/main/default/objects/Membership_Participant__c/fields/User_Permissions__c.field-meta.xml
<CustomField>
    <fullName>User_Permissions__c</fullName>
    <label>User Permissions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manage Members</fullName>
            </value>
            <value>
                <fullName>Use Credit</fullName>
            </value>
            <value>
                <fullName>Purchase in-Store</fullName>
            </value>
            <value>
                <fullName>Purchase online</fullName>
            </value>
            <value>
                <fullName>View PowerPass pricing</fullName>
            </value>
            <value>
                <fullName>View transactions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>